[tool.poetry]
name = "pyread7k"
version = "0.1.0"
description = "Python library to handle parsing and processing of s7k files"
authors = ["Rógvi Dávid Arge <rda@flowtale.ai>", "Rasmus Klett Mortensen <rasmus.mortensen@teledyne.com>"]
license = "Teledyne"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.20.1"
scipy = "^1.6.0"
geopy = "^2.1.0"
psutil = "^5.8.0"
xarray = "^0.16.2"
numba = "^0.52.0"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
matplotlib = "^3.3.4"
black = "^20.8b1"
isort = "^5.7.0"
bandit = "^1.7.0"
pre-commit = "^2.10.1"
blacken-docs = "^1.9.2"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
