[tool.poetry]
name = "pyread7k"
version = "1.0.0"
description = "Python library to handle parsing and processing of s7k files"
authors = ["Teledyne RESON"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=8"
numpy = "^1.20.1"
geopy = "^2.1.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
matplotlib = "^3.3.4"
black = "^20.8b1"
isort = "^5.7.0"
bandit = "^1.7.0"
pre-commit = "^2.10.1"
blacken-docs = "^1.9.2"
python-dotenv = "^0.15.0"
ipykernel = "^5.5.0"
pytest-profiling = "^1.7.0"
pylint = "^2.7.2"
flake8 = "^3.8.4"
tox = "^3.23.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
